<resources>
    <string name="app_name">cmpt362_project</string>
    <string name="dashboard">Dashboard</string>
    <string name="add_property">New Property</string>
    <string name="inbox">Inbox</string>
    <string name="profile">Profile</string>

    <string-array name="property_status_options">
        <item>Active</item>
        <item>Rented</item>
        <item>Unlisted</item>
        <item>Archived</item>
    </string-array>
    <string name="status_prompt">Select Status</string>

    <string-array name="provinces">
        <item>Alberta</item>
        <item>British Columbia</item>
        <item>Manitoba</item>
        <item>New Brunswick</item>
        <item>Newfoundland and Labrador</item>
        <item>Nova Scotia</item>
        <item>Ontario</item>
        <item>Prince Edward Island</item>
        <item>Quebec</item>
        <item>Saskatchewan</item>
    </string-array>

    <string-array name="house_kinds">
        <item>House</item>
        <item>Townhouse</item>
        <item>Apartment</item>
    </string-array>

    <string name="postal">Ex. V5A 1S6</string>
    <string name="available_date">Available Date</string>
    <string name="square_f">Square Footage</string>
    <string name="add_info">Additional Information</string>
    <string name="pets">Pets</string>
    <string name="ac">A/C</string>
    <string name="fh">Floor Heating</string>
    <string name="parking">Parking</string>
    <string name="furniture">Basic Furniture</string>
    <string name="ev">EV charger</string>

    <string name="description_title">Title</string>
    <string name="description">Description</string>
    <string name="description_text">Welcome to your new home at 422 Deer View Avenue!
This spacious 4 bedroom, 3.5 bathroom house offers 4200 sq ft of living space, perfect for a family or group of friends. Schedule a viewing today!</string>

    <string name="property_description">Upload Image here</string>
    <string name="platform_selection">Please select platform(s) to upload</string>

</resources>